--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<title>Home Page</title>
 	</head>
 	<body>
-		<h1>Home page</h1>
+		<h1>Jackie's and Ryans's Home Page</h1>
 		<nav>
 			<ul>
 				<li><a href="html-css">HTML & CSS Assignments</a></li>
