initial try: updates from HTML LAB

--- a/html-css/wk01-lab-exercise-files/javascript_jquery.html
+++ b/html-css/wk01-lab-exercise-files/javascript_jquery.html
@@ -16,5 +16,6 @@
         <p>Now, this one book will help you master all of the JavaScript and 
             jQuery skills that every web developer should have. To find out 
             how, <a href="">read more...</a></p>
+		<p id="service">For Customer Service, call us from 8am to 5pm at 1-555-555-5555.</p>
      </body>
 </html>
