--- a/html-css/wk01-assignment-exercise-files/index.html
+++ b/html-css/wk01-assignment-exercise-files/index.html
@@ -6,6 +6,8 @@
 	<img src="images/town_hall_logo.gif" alt="town hall logo" height="80">
 	<title>San Joaquin Valley Town Hall</title>
 	<link rel="shortcut icon" href="images/favicon.ico">
+	<h2>San Joaquin Valley Town Hall</h2>
+	<h3>Celebrating our 75th Year</h3>
 </head>
 
 <body>
