--- a/html-css/wk01-assignment-exercise-files/index.html
+++ b/html-css/wk01-assignment-exercise-files/index.html
@@ -16,9 +16,9 @@
 	<main>
 		<h2>Our Mission</h2>
 
-		San Joaquin Valley Town Hall is a non-profit organization that is run by an all-volunteer board of directors. Our mission is to bring nationally and internationally renowned, thought-provoking speakers who inform, educate, and entertain our audience! As one or our members told us:
+		<p>San Joaquin Valley Town Hall is a non-profit organization that is run by an all-volunteer board of directors. Our mission is to bring nationally and internationally renowned, thought-provoking speakers who inform, educate, and entertain our audience! As one or our members told us:</p>
 
-		Each year I give a ticket package to each of our family members. I think of it as the gift of knowledge...and that is priceless.
+		<blockquote>"Each year I give a ticket package to each of our family members. I think of it as the gift of knowledge...and that is priceless."</blockquote>
 
 
 		<h2>Our Ticket Packages</h2>
