--- a/html-css/wk01-assignment-exercise-files/index.html
+++ b/html-css/wk01-assignment-exercise-files/index.html
@@ -22,10 +22,11 @@
 
 
 		<h2>Our Ticket Packages</h2>
-
-		Season Package: $95
-		Patron Package: $200
-		Single Speaker: $25
+		<ul>
+			<li>Season Package: $95</li>
+			<li>Patron Package: $200</li>
+			<li>Single Speaker: $25</li>
+		</ul>
 
 
 		<h1>This season's guest speakers</h1>
