Finished step 11, speakers have links to personal site info

--- a/html-css/wk01-assignment-exercise-files/index.html
+++ b/html-css/wk01-assignment-exercise-files/index.html
@@ -34,19 +34,19 @@
 		<h3>
 		October
 		<br>
-		Jeffrey Toobin
+		<a href="speakers/toobin.html">Jeffrey Toobin</a>
 		</h3>
 
 		<h3>
 		November
 		<br>
-		Andrew Ross Sorkin
+		<a href="speakers/sorkin.html">Andrew Ross Sorkin</a>
 		</h3>
 
 		<h3>
 		January
 		<br>
-		Amy Chua
+		<a href="speakers/chua.html">Amy Chua</a>
 		</h3>
 		
 	</main>
