--- a/html-css/wk01-assignment-exercise-files/index.html
+++ b/html-css/wk01-assignment-exercise-files/index.html
@@ -3,13 +3,13 @@
 
 <head>
 	<meta charset="utf-8">
-	<img src="images/town_hall_logo.gif" alt="town hall logo" height="80">
 	<title>San Joaquin Valley Town Hall</title>
 	<link rel="shortcut icon" href="images/favicon.ico">
 </head>
 
 <body>
 	<header>
+		<img src="images/town_hall_logo.gif" alt="town hall logo" height="80">
 		<h2>San Joaquin Valley Town Hall</h2>
 		<h3>Celebrating our 75th Year</h3>		
 	</header>
@@ -36,18 +36,21 @@
 		<br>
 		<a href="speakers/toobin.html">Jeffrey Toobin</a>
 		</h3>
-
+		<img src="images/toobin75.jpg" alt="Jeffrey Toobin">
+		
 		<h3>
 		November
 		<br>
 		<a href="speakers/sorkin.html">Andrew Ross Sorkin</a>
 		</h3>
+		<img src="images/sorkin75.jpg" alt="Andrew Ross Sorkin">
 
 		<h3>
 		January
 		<br>
 		<a href="speakers/chua.html">Amy Chua</a>
 		</h3>
+		<img src="images/chua75.jpg" alt="Amy Chua">
 		
 	</main>
 	<footer>
