--- a/html-css/wk01-assignment-exercise-files/speakers/chua.html
+++ b/html-css/wk01-assignment-exercise-files/speakers/chua.html
@@ -11,6 +11,8 @@
 	<main>
 		<h1>Amy Chua</h1>
 		<h2>This page is under construction.</h2>
+		<h2>This page is under construction.</h2>
+		<p> <a href = "../index.html">Return to Index Page</a></p>	
 	</main>
 </body>
 
