--- a/html-css/wk01-assignment-exercise-files/index.html
+++ b/html-css/wk01-assignment-exercise-files/index.html
@@ -9,7 +9,9 @@
 
 <body>
 	<header>
-		
+		<img src="images/town_hall_logo.gif" alt="town hall logo" height="80">
+		<h2>San Joaquin Valley Town Hall</h2>
+		<h3>Celebrating our 75th Year</h3>
 	</header>
 	<main>
 		
