--- a/html-css/wk01-assignment-exercise-files/index.html
+++ b/html-css/wk01-assignment-exercise-files/index.html
@@ -14,7 +14,32 @@
 		<h3>Celebrating our 75th Year</h3>
 	</header>
 	<main>
-		
+		<h2>Our Mission</h2>
+
+		San Joaquin Valley Town Hall is a non-profit organization that is run by an all-volunteer board of directors. Our mission is to bring nationally and internationally renowned, thought-provoking speakers who inform, educate, and entertain our audience! As one or our members told us:
+
+		Each year I give a ticket package to each of our family members. I think of it as the gift of knowledge...and that is priceless.
+
+
+		<h2>Our Ticket Packages</h2>
+
+		Season Package: $95
+		Patron Package: $200
+		Single Speaker: $25
+
+
+		<h1>This season's guest speakers</h1>
+
+		October
+		Jeffrey Toobin
+
+		November
+		Andrew Ross Sorkin
+
+		January
+		Amy Chua
+
+		(c) 2018, San Joaquin Valley Town Hall, Fresno, CA 93755
 	</main>
 	<footer>
 		
