--- a/html-css/wk01-assignment-exercise-files/index.html
+++ b/html-css/wk01-assignment-exercise-files/index.html
@@ -20,16 +20,18 @@
 		San Joaquin Valley Town Hall is a non-profit organization that is run by an all-volunteer board of directors. Our mission is to bring nationally and internationally renowned, thought-provoking speakers who inform, educate, and entertain our audience! As one or our members told us:
 
 			<blockquote>
-			Each year I give a ticket package to each of our family members. I think of it as the gift of knowledge...and that is priceless.
+			"Each year I give a ticket package to each of our family members. I think of it as the gift of knowledge...and that is priceless.""
 			</blockquote>
 		</p>
 
 
 		<h2>Our Ticket Packages</h2>
 
-		Season Package: $95
-		Patron Package: $200
-		Single Speaker: $25
+		<ul>
+			<li>Season Package: $95</li>
+			<li>Patron Package: $200</li>
+			<li>Single Speaker: $25</li>
+		</ul>
 
 
 		<h1>This season's guest speakers</h1>
