--- a/html-css/wk01-assignment-exercise-files/index.html
+++ b/html-css/wk01-assignment-exercise-files/index.html
@@ -36,8 +36,10 @@
 
 		<h1>This season's guest speakers</h1>
 
-		October
-		Jeffrey Toobin
+		<h3>
+			October <br>
+			Jeffrey Toobin
+		</h3>
 
 		November
 		Andrew Ross Sorkin
