updated the other speakers with h3 tag and line break

--- a/html-css/wk01-assignment-exercise-files/index.html
+++ b/html-css/wk01-assignment-exercise-files/index.html
@@ -41,11 +41,15 @@
 			Jeffrey Toobin
 		</h3>
 
-		November
+		<h3>
+		November <br>
 		Andrew Ross Sorkin
+		</h3>
 
-		January
+		<h3>
+		January <br>
 		Amy Chua
+		</h3>
 
 		(c) 2018, San Joaquin Valley Town Hall, Fresno, CA 93755
 	</main>
