added links to each speaker

--- a/html-css/wk01-assignment-exercise-files/index.html
+++ b/html-css/wk01-assignment-exercise-files/index.html
@@ -38,17 +38,17 @@
 
 		<h3>
 			October <br>
-			Jeffrey Toobin
+			<a href="speakers/toobin.html">Jeffrey Toobin</a>
 		</h3>
 
 		<h3>
-		November <br>
-		Andrew Ross Sorkin
+			November <br>
+			<a href="speakers/sorkin.html">Andrew Ross Sorkin</a>
 		</h3>
 
 		<h3>
-		January <br>
-		Amy Chua
+			January <br>
+			<a href="speakers/chua.html">Amy Chua</a>
 		</h3>
 
 		(c) 2018, San Joaquin Valley Town Hall, Fresno, CA 93755
