Added speaker images

--- a/html-css/wk01-assignment-exercise-files/index.html
+++ b/html-css/wk01-assignment-exercise-files/index.html
@@ -40,16 +40,19 @@
 			October <br>
 			<a href="speakers/toobin.html">Jeffrey Toobin</a>
 		</h3>
+		<img src="images/toobin75.jpg" alt="toobin" height="75">
 
 		<h3>
 			November <br>
 			<a href="speakers/sorkin.html">Andrew Ross Sorkin</a>
 		</h3>
+		<img src="images/sorkin75.jpg" alt="sorkin" height="75">
 
 		<h3>
 			January <br>
 			<a href="speakers/chua.html">Amy Chua</a>
 		</h3>
+		<img src="images/chua75.jpg" alt="chua" height="75">
 
 		(c) 2018, San Joaquin Valley Town Hall, Fresno, CA 93755
 	</main>
