added footer paragraph

--- a/html-css/wk01-assignment-exercise-files/index.html
+++ b/html-css/wk01-assignment-exercise-files/index.html
@@ -54,10 +54,10 @@
 		</h3>
 		<img src="images/chua75.jpg" alt="chua" height="75">
 
-		(c) 2018, San Joaquin Valley Town Hall, Fresno, CA 93755
+		
 	</main>
 	<footer>
-		
+		<p>(c) 2018, San Joaquin Valley Town Hall, Fresno, CA 93755</p>
 	</footer>
 </body>
 </html>
