added copyright symbol

--- a/html-css/wk01-assignment-exercise-files/index.html
+++ b/html-css/wk01-assignment-exercise-files/index.html
@@ -57,7 +57,7 @@
 		
 	</main>
 	<footer>
-		<p>(c) 2018, San Joaquin Valley Town Hall, Fresno, CA 93755</p>
+		<p>&#169; 2018, San Joaquin Valley Town Hall, Fresno, CA 93755</p>
 	</footer>
 </body>
 </html>
