added return link

--- a/html-css/wk01-assignment-exercise-files/speakers/toobin.html
+++ b/html-css/wk01-assignment-exercise-files/speakers/toobin.html
@@ -11,7 +11,9 @@
     <main>
 	    <h1>Jeffrey Toobin</h1>
 	    <h2>This page is under construction.</h2>	        
-    </main>
+	</main>
+	
+	<p><a href="../index.html">Return to index page.</a></p>
 </body>
 
 </html>
