--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     
 		<nav>
 			<ul>
-				<li><a href="html-css">HTML & CSS Assignments</a></li>
+				<li><a href="html-css/wk01-assignment-exercise-files/index.html">HTML & CSS Assignments</a></li>
 			</ul>
 		</nav>
 	</body>
