added wk2 lab files

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 		<nav>
 			<ul>
 				<li><a href="html-css/wk01-assignment-exercise-files/index.html">HTML & CSS Assignments</a></li>
+				<li><a href="html-css/wk02-lab-exercise-files/index.html">HTML & CSS Assignments</a></li>
 			</ul>
 		</nav>
 	</body>
