--- a/html-css/index.html
+++ b/html-css/index.html
@@ -9,6 +9,7 @@
         <ul>
           <li><a href="wk01-lab-exercise-files/javascript_jquery.html">Week 01 Lab</li>
           <li><a href="wk01-assignment-exercise-files">Week 01 Assignment</li>
+		  <li><a href="wk02-assignment-exercise-files">Week 02 Lab</li>
         </ul>
       </nav>
     </body>
