not sure what changed but trying to pull the finished assignment

--- a/html-css/wk02-lab-exercise-files/index.html
+++ b/html-css/wk02-lab-exercise-files/index.html
@@ -8,7 +8,9 @@
 	<link rel="stylesheet" href="styles/normalize.css">
 	<link rel="stylesheet" href="styles/main.css">
 </head>
-
+<style>
+<!-- a:hover{color:teal;} -->
+</style>
 <body>
 	<header>
 		<img src="images/town_hall_logo.gif" alt="Town Hall Logo" height="80">
