--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 		<h1>Calvin's Home Page</h1>
 		<nav>
 			<ul>
-				<li><a href="html-css">HTML & CSS Assignments</a></li>
+				<li><a href="html-css/index.html">HTML & CSS Assignments</a></li>
 			</ul>
 		</nav>
 	</body>
