--- a/html-css/wk02-lab-exercise-files/index.html
+++ b/html-css/wk02-lab-exercise-files/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" >
 
 <head>
 	<meta charset="utf-8">
@@ -8,9 +8,7 @@
 	<link rel="stylesheet" href="styles/normalize.css">
 	<link rel="stylesheet" href="styles/main.css">
 </head>
-<style>
-<!-- a:hover{color:teal;} -->
-</style>
+<div>
 <body>
 	<header>
 		<img src="images/town_hall_logo.gif" alt="Town Hall Logo" height="80">
@@ -49,5 +47,5 @@
 		<p>&copy;2018, San Joaquin Valley Town Hall, Fresno, CA 93755</p>
 	</footer>
 </body>
-
+</div>
 </html>
