--- a/html-css/wk02-bootstrap-example/index.html
+++ b/html-css/wk02-bootstrap-example/index.html
@@ -8,6 +8,7 @@
         <script src="assets/js/bootstrap.bundle.min.js"></script>
         <link rel="stylesheet" href="assets/css/bootstrap.min.css">
         <link rel="stylesheet" href="assets/css/main.css">
+        <link href="https://fonts.googleapis.com/css2?family=Noto+Serif:ital@1&display=swap" rel="stylesheet">
         <title>Travel Blog</title>
     </head>
     <body>
@@ -40,7 +41,34 @@
                     </a>
                   </div>
             </div>
-        
+            <div class="row">
+                <div class="col-12 quote">
+                    <h3>"Imagination is more important than knowledge. For knowledge is limited, whereas imagination embraces the entire world, stimulating progress, giving birth to evolution."</h3>
+                </div> 
+            </div>
+            <div class="row card-section">
+                <div class="col-md-4"><div class="card" style="width: 18rem;">
+                    <img src="..." class="card-img-top" alt="...">
+                    <div class="card-body">
+                      <h5 class="card-title">Card title</h5>
+                      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                    </div>
+                  </div></div>
+                <div class="col-md-4"><div class="card" style="width: 18rem;">
+                    <img src="..." class="card-img-top" alt="...">
+                    <div class="card-body">
+                      <h5 class="card-title">Card title</h5>
+                      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                    </div>
+                  </div></div>
+                <div class="col-md-4"><div class="card" style="width: 18rem;">
+                    <img src="..." class="card-img-top" alt="...">
+                    <div class="card-body">
+                      <h5 class="card-title">Card title</h5>
+                      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                    </div>
+                  </div></div>
+            </div>
         </div>
 
     </body>
