added card content

--- a/html-css/wk02-bootstrap-example/index.html
+++ b/html-css/wk02-bootstrap-example/index.html
@@ -46,26 +46,26 @@
                     <h3>"Imagination is more important than knowledge. For knowledge is limited, whereas imagination embraces the entire world, stimulating progress, giving birth to evolution."</h3>
                 </div> 
             </div>
-            <div class="row card-section">
+            <div id="transportation" class="row card-section">
                 <div class="col-md-4"><div class="card" style="width: 18rem;">
-                    <img src="..." class="card-img-top" alt="...">
+                    <img src="assets/imgs/pexels-maryia-plashchynskaya-3393705.jpg" class="card-img-top" alt="Woman 1">
                     <div class="card-body">
-                      <h5 class="card-title">Card title</h5>
-                      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                      <h5 class="card-title">LIVE</h5>
+                      <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore.</p>
                     </div>
                   </div></div>
                 <div class="col-md-4"><div class="card" style="width: 18rem;">
-                    <img src="..." class="card-img-top" alt="...">
+                    <img src="assets/imgs/pexels-tubarones-photography-4654356.jpg" class="card-img-top" alt="Woman 2">
                     <div class="card-body">
-                      <h5 class="card-title">Card title</h5>
-                      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                      <h5 class="card-title">LOVE</h5>
+                      <p class="card-text">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium</p>
                     </div>
                   </div></div>
                 <div class="col-md-4"><div class="card" style="width: 18rem;">
-                    <img src="..." class="card-img-top" alt="...">
+                    <img src="assets/imgs/pexels-jc-romero-3236735.jpg" class="card-img-top" alt="Woman 3">
                     <div class="card-body">
-                      <h5 class="card-title">Card title</h5>
-                      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                      <h5 class="card-title">LIFE</h5>
+                      <p class="card-text">Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit.</p>
                     </div>
                   </div></div>
             </div>
