--- a/html-css/wk02-bootstrap-example/index.html
+++ b/html-css/wk02-bootstrap-example/index.html
@@ -8,10 +8,12 @@
     <script src="assets/js/bootstrap.bundle.min.js"></script>
     <link rel="stylesheet" href="assets/css/bootstrap.min.css">
     <link rel="stylesheet" href="assets/css/main.css">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital@1&display=swap" rel="stylesheet">
     <title> Travel Blog </title>
 </head>
 <body>
     <div class="container-fluid">
+        <!-- Carousel -->
         <div class="row">
             <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
                 <ol class="carousel-indicators">
@@ -41,6 +43,81 @@
                   <span class="carousel-control-next-icon" aria-hidden="true"></span>
                   <span class="sr-only">Next</span>
                 </a>
+            </div>
+        </div>
+
+        <!-- Quote -->
+        <div class="row">
+            <div class="col-12 quote">
+                <h3>
+                    "Imagination is more important than knowledge. For knowledge is limited, whereas imagination embraces the entire world, stimulating progress, giving birth to evolution."
+                </h3>
+            </div>
+        </div>
+
+        <!-- Cards -->
+        <div id="transportation" class="row card-section">
+            <div class="col-md-4 col-sm-12 col-xs-12 mb-3">
+                <div class="card" style="width: 18rem">
+                    <img src="assets/imgs/pexels-wendy-wei-5041858.jpg" class="card-img-top" alt="seagull">
+                    <div class="card-body">
+                      <h5 class="card-title">orci a scelerisque</h5>
+                      <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-md-4 col-sm-12 col-xs-12 mb-3">
+                <div class="card" style="width: 18rem">
+                    <img src="assets/imgs/pexels-barikive-5282392.jpg" class="card-img-top" alt="portrait">
+                    <div class="card-body">
+                      <h5 class="card-title">ultrices sagittis</h5>
+                      <p class="card-text">Proin fermentum leo vel orci porta non pulvinar. Sodales ut eu sem integer vitae justo.</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-md-4 col-sm-12 col-xs-12 mb-3">
+                <div class="card" style="width: 18rem">
+                    <img src="assets/imgs/pexels-ave-calvar-martinez-3354887.jpg" class="card-img-top" alt="coastline">
+                    <div class="card-body">
+                      <h5 class="card-title">sollicitudin aliquam</h5>
+                      <p class="card-text">Dolor sed viverra ipsum nunc aliquet bibendum enim facilisis. Mi eget mauris pharetra et ultrices.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <!-- List -->
+        <div id="list" class="row">
+            <div class="col-12"> <h1> List </h1> </div>
+            <div class="col-6">
+                <div class="list-group" id="list-tab" role="tablist">
+                <a class="list-group-item list-group-item-action active" id="list-home-list" data-toggle="list" href="#list-home" role="tab" aria-controls="home">Option 1</a>
+                <a class="list-group-item list-group-item-action" id="list-profile-list" data-toggle="list" href="#list-profile" role="tab" aria-controls="profile">Option 2</a>
+                <a class="list-group-item list-group-item-action" id="list-messages-list" data-toggle="list" href="#list-messages" role="tab" aria-controls="messages">Option 3</a>
+                <a class="list-group-item list-group-item-action" id="list-settings-list" data-toggle="list" href="#list-settings" role="tab" aria-controls="settings">Option 4</a>
+                </div>
+            </div>
+
+            <div class="col-6">
+                <div class="tab-content" id="nav-tabContent">
+                <div class="tab-pane fade show active" id="list-home" role="tabpanel" aria-labelledby="list-home-list">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Eget magna fermentum iaculis eu non diam phasellus vestibulum lorem. Lectus magna fringilla urna porttitor. Eget duis at tellus at urna condimentum. Purus sit amet luctus venenatis lectus magna.
+                </div>
+
+                <div class="tab-pane fade" id="list-profile" role="tabpanel" aria-labelledby="list-profile-list">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Faucibus ornare suspendisse sed nisi lacus sed viverra. Leo duis ut diam quam nulla porttitor massa id neque. Duis ut diam quam nulla. A iaculis at erat pellentesque adipiscing commodo elit at.
+                </div>
+                
+                <div class="tab-pane fade" id="list-messages" role="tabpanel" aria-labelledby="list-messages-list">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Nibh cras pulvinar mattis nunc. Vel eros donec ac odio tempor orci dapibus ultrices. Malesuada bibendum arcu vitae elementum curabitur vitae nunc sed velit. Lobortis scelerisque fermentum dui faucibus in.
+                </div>
+                
+                <div class="tab-pane fade" id="list-settings" role="tabpanel" aria-labelledby="list-settings-list">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Nullam eget felis eget nunc. Etiam non quam lacus suspendisse. Lacus vestibulum sed arcu non odio euismod lacinia at. Pellentesque habitant morbi tristique senectus et.
+                </div>
+                </div>
             </div>
         </div>
     </div>
