made site responsive

--- a/html-css/wk02-bootstrap-example/index.html
+++ b/html-css/wk02-bootstrap-example/index.html
@@ -90,8 +90,8 @@
 
         <!-- List -->
         <div id="list" class="row">
-            <div class="col-12"> <h1> List </h1> </div>
-            <div class="col-6">
+            <div class="col-12 mb-3"> <h1> List </h1> </div>
+            <div class="col-xl-4 col-lg-4 col-md-4 col-sm-12 col-xs-12 mb-3">
                 <div class="list-group" id="list-tab" role="tablist">
                 <a class="list-group-item list-group-item-action active" id="list-home-list" data-toggle="list" href="#list-home" role="tab" aria-controls="home">Option 1</a>
                 <a class="list-group-item list-group-item-action" id="list-profile-list" data-toggle="list" href="#list-profile" role="tab" aria-controls="profile">Option 2</a>
@@ -100,7 +100,7 @@
                 </div>
             </div>
 
-            <div class="col-6">
+            <div class="col-xl-8 col-lg-8 col-md-8 col-sm-12 col-xs-12 mb-3">
                 <div class="tab-content" id="nav-tabContent">
                 <div class="tab-pane fade show active" id="list-home" role="tabpanel" aria-labelledby="list-home-list">
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Eget magna fermentum iaculis eu non diam phasellus vestibulum lorem. Lectus magna fringilla urna porttitor. Eget duis at tellus at urna condimentum. Purus sit amet luctus venenatis lectus magna.
