--- a/html-css/index.html
+++ b/html-css/index.html
@@ -1,16 +1,21 @@
 <!DOCTYPE html>
-  <html>
-    <head>
-      <title>HTML and CSS Assignments</title>
-    <head>
-    <body>
-      <h1>HTML and CSS Assignments</h1>
-      <nav>
-        <ul>
-          <li><a href="wk01-lab-exercise-files/javascript_jquery.html">Week 01 Lab</li>
-          <li><a href="wk01-assignment-exercise-files/index.html">Week 01 Assignment</li>
-		  <li><a href="wk02-lab-exercise-files/index.html">Week 02 Lab</li>
-        </ul>
-      </nav>
-    </body>
-  </html>
+<html>
+
+<head>
+  <title>HTML and CSS Assignments</title>
+
+  <head>
+
+  <body>
+    <h1>HTML and CSS Assignments</h1>
+    <nav>
+      <ul>
+        <li><a href="wk01-lab-exercise-files/javascript_jquery.html">Week 01 Lab</li>
+        <li><a href="wk01-assignment-exercise-files/index.html">Week 01 Assignment</li>
+        <li><a href="wk02-lab-exercise-files/index.html">Week 02 Lab</li>
+        <li><a href="week-02/index.html">Week 02 Lab</li>
+      </ul>
+    </nav>
+  </body>
+
+</html>
