--- a/html-css/index.html
+++ b/html-css/index.html
@@ -10,7 +10,7 @@
           <li><a href="wk01-lab-exercise-files/javascript_jquery.html">Week 01 Lab</li>
           <li><a href="wk01-assignment-exercise-files/index.html">Week 01 Assignment</li>
 		  <li><a href="wk02-lab-exercise-files/index.html">Week 02 Lab</li>
-		  <li><a href="week-02/index.html">Week 02 Lab</li>
+		  <li><a href="week-02/index.html">Travel page</li>
         </ul>
       </nav>
     </body>
