--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<title>Home Page</title>
 	</head>
 	<body>
-		<h1>Calvin's Home Page</h1>
+		<h1>Ryan & Calvin's Home Page</h1>
 		<nav>
 			<ul>
 				<li><a href="html-css/index.html">HTML & CSS Assignments</a></li>
