updated link in in the main HTMl file to the wk3 lab exercise

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 			<ul>
 				<li><a href="html-css/wk01-assignment-exercise-files/index.html">HTML & CSS Assignments</a></li>
 				<li><a href="html-css/wk02-lab-exercise-files/index.html">HTML & CSS Assignments</a></li>
+				<li><a href="html-css/wk03-lab-exercise-files/index.html"> wk03-lab-exercise</a></li>
 			</ul>
 		</nav>
 	</body>
