Week 3 html lab, step 2 finsihed

--- a/html-css/week-02/index.html
+++ b/html-css/week-02/index.html
@@ -88,7 +88,7 @@
 					  <a class="list-group-item list-group-item-action" data-toggle="list" href="#item4" role="tab">How not to lose a Kidney</a>
 					</div>
 				</div>
-				<div class="col" id="tabtext">
+				<div class="col-sm-8" id="tabtext">
 
 					<!-- Tab panes -->
 					<div class="tab-content">
