--- a/html-css/wk03-lab-exercise-files/index.html
+++ b/html-css/wk03-lab-exercise-files/index.html
@@ -18,6 +18,10 @@
 	<nav id="nav_menu">
 		<ul>
 			<li><a href="index.html">Home</a></li>
+			<li><a href="speakers.html">Speakers</a></li>
+			<li><a href="luncheons.html">Luncheons</a></li>
+			<li><a href="tickets.html">Tickets</a></li>
+			<li><a href="aboutus.html">About Us</a></li>
 		</ul>
 	</nav>
 	<main>
