added basic nav

--- a/html-css/wk03-lab-exercise-files/index.html
+++ b/html-css/wk03-lab-exercise-files/index.html
@@ -7,6 +7,7 @@
 	<link rel="shortcut icon" href="images/favicon.ico">
 	<link rel="stylesheet" href="styles/normalize.css">
 	<link rel="stylesheet" href="styles/main.css">
+	<link ref="stylesheet" href="styles/speakers.css">
 </head>
 
 <body>
@@ -15,6 +16,17 @@
 		<h2>San Joaquin Valley Town Hall</h2>
 		<h3>Celebrating our <span class="shadow">75<sup>th</sup></span> Year</h3>
 	</header>
+
+	<nav id="nav_menu">
+		<ul>
+			<li><a class="current" href="index.html"> Home </a></li>
+			<li><a href="#"> Speakers </a></li>
+			<li><a href="#"> Luncheons </a></li>
+			<li><a href="#"> Tickets </a></li>
+			<li><a href="#"> About Us </a></li>
+		</ul>
+	</nav>
+
 	<main>
 		<section>
 			<h2>Our Mission</h2>
