--- a/html-css/wk03-lab-exercise-files/c6_index.html
+++ b/html-css/wk03-lab-exercise-files/c6_index.html
@@ -15,6 +15,15 @@
 		<h2>San Joaquin Valley Town Hall</h2>
 		<h3>Celebrating our <span class="shadow">75<sup>th</sup></span> Year</h3>
 	</header>
+	<nav id="nav_menu">
+		<ul>
+			<li><a href="c6_index.html" class ="current">Home</a></li>
+			<li><a href="Speakers.html">Speakers</a></li>
+			<li><a href="Luncheons.html">Luncheons</a></li>
+			<li><a href="Tickets.html">Tickets</a></li>
+			<li><a href="AboutUs.html">About Us</a></li>
+		</ul>
+	</nav>
 	<main>
 		<section>
 			<h2>Our Mission</h2>
