--- a/html-css/wk03-lab-exercise-files/c6_index.html
+++ b/html-css/wk03-lab-exercise-files/c6_index.html
@@ -21,7 +21,14 @@
 			<li><a href="Speakers.html">Speakers</a></li>
 			<li><a href="Luncheons.html">Luncheons</a></li>
 			<li><a href="Tickets.html">Tickets</a></li>
-			<li><a href="AboutUs.html">About Us</a></li>
+			<li><a href="AboutUs.html">About Us</a>
+				<ul>
+					<li><a href="OurHistory.html">Our History</a></li>
+					<li><a href="BoardofDirectors.html">Board of Directors</a></li>
+					<li><a href="PastSpeakers.html">Past Speakers</a></li>
+					<li><a href="ContactInformation.html">Contact Information</a></li>
+				</ul>
+			</li>
 		</ul>
 	</nav>
 	<main>
