added second tier

--- a/html-css/wk03-lab-exercise-files/index.html
+++ b/html-css/wk03-lab-exercise-files/index.html
@@ -23,7 +23,13 @@
 			<li><a href="#"> Speakers </a></li>
 			<li><a href="#"> Luncheons </a></li>
 			<li><a href="#"> Tickets </a></li>
-			<li><a href="#"> About Us </a></li>
+			<li><a href="#"> About Us </a>
+				<ul>
+					<li><a href="#">Our History</a></li>
+					<li><a href="#">Board of Directors</a></li>
+					<li><a href="#">Past Speakers</a></li>
+					<li><a href="#">Contact Information</a></li>
+				</ul></li>
 		</ul>
 	</nav>
 
