--- a/html-css/wk03-lab-exercise-files/index.html
+++ b/html-css/wk03-lab-exercise-files/index.html
@@ -54,7 +54,7 @@
 				Curator at the Utah Museum of Natural History, steps to the podium. Sampson's research 
 				has focused on the ecology and evolution of late Cretaceous dinosaurs and he has conducted 
 				fieldwork in a number of countries in Africa.</p>
-				<p><a href="speakers/c6_sampson.html">Read more.</a>&nbsp;<b>Or meet us there!</b></p>
+				<p><a href="speakers/c6_sampson.html">Read more.</a>&nbsp;<a href="media/sampson.mp4" target="_blank">Or play video.</a></p>
 			</article>
 			
 			<h2>Our Ticket Packages</h2>
