--- a/html-css/week-02/index.html
+++ b/html-css/week-02/index.html
@@ -101,20 +101,20 @@
 
         <div class="col">
           <div class="tab-content">
-            <div class="tab-pane active" id="BoraBora" role="tabpanel1">Bora Bora is a small South Pacific island
+            <div class="tab-pane active" id="BoraBora" role="tabpanel">Bora Bora is a small South Pacific island
               northwest of Tahiti in French Polynesia. Surrounded by sand-fringed islets and a turquoise lagoon
               protected by a coral reef, it’s known for its scuba diving.</div>
-            <div class="tab-pane" id="Santorini" role="tabpanel1">Santorini is one of the Cyclades islands in the Aegean
+            <div class="tab-pane" id="Santorini" role="tabpanel">Santorini is one of the Cyclades islands in the Aegean
               Sea. It was devastated by a volcanic eruption in the 16th century BC, forever shaping its rugged
               landscape. The whitewashed, cubiform houses of its 2 principal towns, Fira and Oia, cling to cliffs above
               an underwater crater.</div>
-            <div class="tab-pane" id="Rome" role="tabpanel1">Rome is the capital city and a special comune of Italy as
+            <div class="tab-pane" id="Rome" role="tabpanel">Rome is the capital city and a special comune of Italy as
               well as the capital of the Lazio region. The city has been a major human settlement for almost three
               millennia.</div>
-            <div class="tab-pane" id="Paris" role="tabpanel1">Paris, France's capital, is a major European city and a
+            <div class="tab-pane" id="Paris" role="tabpanel">Paris, France's capital, is a major European city and a
               global center for art, fashion, gastronomy and culture. Its 19th-century cityscape is crisscrossed by wide
               boulevards and the River Seine.</div>
-            <div class="tab-pane" id="SanFrancisco" role="tabpanel1">San Francisco, officially the City and County of
+            <div class="tab-pane" id="SanFrancisco" role="tabpanel">San Francisco, officially the City and County of
               San Francisco and colloquially known as The City, SF, or Frisco and San Fran, is the cultural, commercial,
               and financial center of Northern California.</div>
           </div>
