updated c7 index file

--- a/html-css/wk03-assignment-exercise-files/index.html
+++ b/html-css/wk03-assignment-exercise-files/index.html
@@ -7,6 +7,7 @@
 	<link rel="shortcut icon" href="images/favicon.ico">
 	<link rel="stylesheet" href="styles/normalize.css">
 	<link rel="stylesheet" href="styles/c7_main.css">
+	<!-- <meta name="viewport" content="width=device-width, initial-scale=1"> -->
 </head>
 
 <body>
