--- a/html-css/wk03-assignment-exercise-files/index.html
+++ b/html-css/wk03-assignment-exercise-files/index.html
@@ -6,7 +6,7 @@
 	<title>San Joaquin Valley Town Hall</title>
 	<link rel="shortcut icon" href="images/favicon.ico">
 	<link rel="stylesheet" href="styles/normalize.css">
-	<link rel="stylesheet" href="styles/c7_main.css">
+	<link rel="stylesheet" href="styles/main.css">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
