updated file names

--- a/html-css/wk03-assignment-exercise-files/index.html
+++ b/html-css/wk03-assignment-exercise-files/index.html
@@ -7,7 +7,7 @@
 	<title>San Joaquin Valley Town Hall</title>
 	<link rel="shortcut icon" href="images/favicon.ico">
 	<link rel="stylesheet" href="styles/normalize.css">
-	<link rel="stylesheet" href="styles/c7_main.css">
+	<link rel="stylesheet" href="styles/main.css">
 	<link rel="stylesheet" href="styles/slicknav.css">
     <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
     <script src="js/jquery.slicknav.min.js"></script>
