Week3 Assignment added, step 2 complete

--- a/html-css/wk03-assignment-exercise-files/c7_index.html
+++ b/html-css/wk03-assignment-exercise-files/c7_index.html
@@ -6,7 +6,8 @@
 	<title>San Joaquin Valley Town Hall</title>
 	<link rel="shortcut icon" href="images/favicon.ico">
 	<link rel="stylesheet" href="styles/normalize.css">
-	<link rel="stylesheet" href="styles/c6_main.css">
+	<link rel="stylesheet" href="styles/c7_main.css">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
 <body>
@@ -15,6 +16,22 @@
 		<h2>San Joaquin Valley Town Hall</h2>
 		<h3>Celebrating our <span class="shadow">75<sup>th</sup></span> Year</h3>
 	</header>
+	<nav id="nav_menu">
+    	<ul>
+        	<li><a href="index.html" class="current">Home</a></li>
+        	<li><a href="speakers.html">Speakers</a></li>
+        	<li><a href="luncheons.html">Luncheons</a></li>
+        	<li><a href="tickets.html">Tickets</a></li>
+        	<li><a href="aboutus.html"> About Us</a>
+            	<ul>
+                	<li><a href="#">Our History</a></li>
+                	<li><a href="#">Board of Directors</a></li>
+                	<li><a href="#">Past Speakers</a></li>
+                	<li><a href="#">Contact Information</a></li>
+            	</ul>
+        	</li>
+    	</ul>
+	</nav>
 	<main>
 		<section>
 			<h2>Our Mission</h2>
@@ -36,7 +53,10 @@
 				Curator at the Utah Museum of Natural History, steps to the podium. Sampson's research 
 				has focused on the ecology and evolution of late Cretaceous dinosaurs and he has conducted 
 				fieldwork in a number of countries in Africa.</p>
-				<p><a href="speakers/c6_sampson.html">Read more.</a>&nbsp;<b>Or meet us there!</b></p>
+				<p>
+					<a href="speakers/c7_sampson.html">Read more.</a>&nbsp;
+					<a href="media/sampson.swf" target="_blank">Or play video.</a>
+				</p>
 			</article>
 			
 			<h2>Our Ticket Packages</h2>
@@ -46,7 +66,6 @@
 				<li>Single Speaker: $25</li>
 			</ul>
 		</section>
-		
 		<aside>
 			<h2>Guest speakers</h2>
 			<h3>October<br><a href="speakers/toobin.html">Jeffrey Toobin</a></h3>
@@ -55,7 +74,7 @@
 			<img src="images/sorkin75.jpg" alt="Andrew Ross Sorkin photo">
 			<h3>January<br><a href="speakers/chua.html">Amy Chua</a></h3>
 			<img src="images/chua75.jpg" alt="Amy Chua photo">
-			<h3>February<br><a href="speakers/c6_sampson.html">Scott Sampson</a></h3>
+			<h3>February<br><a href="speakers/c7_sampson.html">Scott Sampson</a></h3>
 			<img src="images/sampson75.jpg" alt="Scott Sampson photo">
 		</aside>
 	</main>
