Completed Steps 16 thru 22

--- a/html-css/wk03-assignment-exercise-files/c7_index.html
+++ b/html-css/wk03-assignment-exercise-files/c7_index.html
@@ -8,7 +8,7 @@
 	<link rel="stylesheet" href="styles/normalize.css">
 	<link rel="stylesheet" href="styles/c7_main.css">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-</head>
+	</head>
 
 <body>
 	<header>
@@ -68,6 +68,7 @@
 		</section>
 		<aside>
 			<h2>Guest speakers</h2>
+			<div>
 			<h3>October<br><a href="speakers/toobin.html">Jeffrey Toobin</a></h3>
 			<img src="images/toobin75.jpg" alt="Jeffrey Toobin photo">
 			<h3>November<br><a href="speakers/sorkin.html">Andrew Ross Sorkin</a></h3>
@@ -76,6 +77,7 @@
 			<img src="images/chua75.jpg" alt="Amy Chua photo">
 			<h3>February<br><a href="speakers/c7_sampson.html">Scott Sampson</a></h3>
 			<img src="images/sampson75.jpg" alt="Scott Sampson photo">
+			</div>
 		</aside>
 	</main>
 	<footer>
