finished exercise 8-1 Week3

--- a/html-css/wk03-assignment-exercise-files/c7_index.html
+++ b/html-css/wk03-assignment-exercise-files/c7_index.html
@@ -8,6 +8,14 @@
 	<link rel="stylesheet" href="styles/normalize.css">
 	<link rel="stylesheet" href="styles/c7_main.css">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link rel="stylesheet" href="styles/slicknav.css">
+	<script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+	<script src="js/jquery.slicknav.min.js"></script>
+	<script type="text/javascript">
+		$(document).ready(function(){
+			$('#nav_menu').slicknav({prependTo:"#mobile_menu"});
+			});
+	</script>
 	</head>
 
 <body>
@@ -16,6 +24,7 @@
 		<h2>San Joaquin Valley Town Hall</h2>
 		<h3>Celebrating our <span class="shadow">75<sup>th</sup></span> Year</h3>
 	</header>
+	<nav id="mobile_menu"></nav>
 	<nav id="nav_menu">
     	<ul>
         	<li><a href="index.html" class="current">Home</a></li>
