--- a/html-css/index.html
+++ b/html-css/index.html
@@ -14,7 +14,7 @@
         <li><a href="wk02-lab-exercise-files/index.html">Week 02 Lab</li>
         <li><a href="week-02/index.html">Week 02 Lab</li>
 		    <li><a href="wk03-assignment-exercise-files/c7_index.html">Week 03 Assignment</li>
-        li><a href="wk03-lab-exercise-files/c6_index.html">Week 03 Lab</li>
+        <li><a href="wk03-lab-exercise-files/c6_index.html">Week 03 Lab</li>
         <li><a href="wk05-lab-exercise-files/c9_index.html">Week 05 Lab</li>
       </ul>
     </nav>
